--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>npm count</title>
 </head>
-<body>
+<body  style="margin:0;">
     <div id="app"></div>
     <script src="app/bundle.js"></script>
 </body>
